cabal-version:      2.4
name:               codebattle
version:            0.1.0

executable codebattle
    main-is:          Main.hs
    default-extensions: DataKinds, TypeOperators, DeriveGeneric
    build-depends:    
        base
        , servant
        , servant-server
        , aeson
        , warp
        , wai
        , wai-cors
        , containers
    hs-source-dirs:   app
    default-language: Haskell2010
